# python-workflow-engine-starter

./: .gitignore  demo.py  pyproject.toml
app/: main.py
app/engine/: status.py  step.py  workflow.py
tests/: test_step.py  test_workflow.py
